tests/fixtures/invalid/unknown_struct_field.c
struct Point {
    int x;
};

int main() {
    struct Point p;
    p.y = 1;
    return 0;
}
